syntax = "proto3";

option csharp_namespace = "Backend.Libs.gRPC.CustomTypes";
package backend.libs.grpc.custom_types;


enum GrpcResponseType
{
  SUCCESS = 0;
  UNKNOWN_ERROR = 1;
  SERVER_ERROR = 2;
  MAINTENANCE = 3;
}